@@ -153,3 +153,5 @@
   in the font is wrong.  Fixed in CButtonArrary, but the problem
   probably exists in other places as well.
 * NxWM:  Increase default spacing of icons on the Start Window.
+* NxWM::CHexCalculator:  Fix some non-standard calculator behavior
+  after = is pressed.  Use upper case hex.  Increase font size.
